# standup

./: .gitignore  LICENSE  README.md  pyproject.toml
standup/: cli.py  config.py  prompts.py  utils.py
standup_llm/: cli.py  llm.py  utils.py
